# CapFrameX

./: .gitignore  AGENTS.md  CLAUDE.md  CapFrameX.sln  Jenkinsfile  LICENSE  MonitoringLibTestApp.sln  PORTABLE_MODE.md  README.md  portable.json.sample  remotecontroller.html
.claude/: settings.local.json
.config/: dotnet-tools.json
CapFrameX.Chart/: AxisMotionScrollingController.cs  AxisTick.cs  CapFrameX.Chart.csproj  LineGrid.cs  LivePlotter.cs  LivePlotterWithGrid.cs  PlotBase.cs  Resources.xaml  ScrollableLivePlot.xaml  ScrollableLivePlot.xaml.cs  packages.config
CapFrameX.Configuration/: CapFrameX.Configuration.csproj  CapFrameXConfiguration.cs  Class1.cs  app.config
CapFrameX.Contracts/: CapFrameX.Contracts.csproj  Class1.cs
CapFrameX.Data/: CapFrameX.Data.csproj  FileRecordInfo.cs  RecordDataProvider.cs
CapFrameX.Database/: CapFrameX.Database.csproj  Class1.cs
CapFrameX.MVVM/: Hotkey.cs  (+3 more)
CapFrameX.UI/src-tauri/: Cargo.toml  tauri.conf.json
CapFrameX.UI/src-tauri/src/: lib.rs  main.rs
capframex-linux/: .gitignore  CLAUDE.md  CMakeLists.txt  Display_Timing_Tracker_DEV_PLAN.md  OVERLAY_DEV_PLAN.md  README.md  capframex-linux-entwicklungsplan.md  capframex.desktop  install-layer.sh  vulkan_layer_global.txt
capframex-linux/CX Logo/: CapFrameX.ai  CapFrameX.eps  CapFrameXLogoOnly.ai  CapFrameXLogoOnly.eps
capframex-linux/scripts/: build.sh  capframex-daemon.service  install-layer.sh  install.sh  run-dev.sh  uninstall-layer.sh  uninstall.sh
capframex-linux/src/app/: CapFrameX.sln
capframex-linux/src/app/CapFrameX.App/: App.axaml  App.axaml.cs  CapFrameX.App.csproj  Program.cs  app.manifest
capframex-linux/src/app/CapFrameX.App/ViewModels/: AnalysisViewModel.cs  CaptureViewModel.cs  CompareViewModel.cs  MainViewModel.cs  SettingsViewModel.cs
capframex-linux/src/app/CapFrameX.App/Views/: AnalysisView.axaml  AnalysisView.axaml.cs  CaptureView.axaml  CaptureView.axaml.cs  CompareView.axaml  CompareView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsPanel.axaml  SettingsPanel.axaml.cs
capframex-linux/src/app/CapFrameX.Core/: CapFrameX.Core.csproj
capframex-linux/src/app/CapFrameX.Core/Analysis/: FrametimeAnalyzer.cs  StatisticsCalculator.cs
capframex-linux/src/app/CapFrameX.Core/Capture/: DaemonClient.cs  FrametimeReceiver.cs
capframex-linux/src/app/CapFrameX.Core/Configuration/: AppSettings.cs  SettingsService.cs
capframex-linux/src/app/CapFrameX.Core/Data/: Session.cs  SessionManager.cs
capframex-linux/src/app/CapFrameX.Core/Hardware/: CpuInfo.cs  GpuInfo.cs  HardwareMonitor.cs  SysfsReader.cs  VulkanGpuEnumerator.cs
capframex-linux/src/app/CapFrameX.Core/Hotkey/: GlobalHotkeyService.cs
capframex-linux/src/app/CapFrameX.Core/System/: SystemInfoService.cs
capframex-linux/src/app/CapFrameX.Shared/: CapFrameX.Shared.csproj
capframex-linux/src/app/CapFrameX.Shared/IPC/: Messages.cs  SocketClient.cs
capframex-linux/src/app/CapFrameX.Shared/Models/: CaptureSession.cs  FrameData.cs  GameInfo.cs
capframex-linux/src/app/FrameReceptionTest/: FrameReceptionTest.csproj  Program.cs
capframex-linux/src/daemon/: CMakeLists.txt  common.h  config.c  config.h  ignore_list.c  ignore_list.h  ipc.c  ipc.h  launcher_detect.c  launcher_detect.h  main.c  process_monitor.c  process_monitor.h
capframex-linux/src/layer/: CMakeLists.txt  capframex_layer.json  data_export.c  data_export.h  ipc_client.c  ipc_client.h  layer.c  layer.h  swapchain.c  swapchain.h  timing.c  timing.h
(+1965 files in other folders)
