[package]
name = "capframex-ui"
version = "0.0.1"
description = "CapFrameX Performance Monitoring UI"
authors = ["CapFrameX Team"]
edition = "2021"

[lib]
name = "capframex_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2"
